Assiginment 2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-fitness
  namespace: aceest
  labels:
    app: aceest-fitness
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aceest-fitness
  template:
    metadata:
      labels:
        app: aceest-fitness
        version: v3.2.4
    spec:
      containers:
        - name: aceest-fitness
          image: yourdockerhubusername/aceest-fitness:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
