Assiginment 2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-fitness-service
  namespace: aceest
  labels:
    app: aceest-fitness
spec:
  type: NodePort
  selector:
    app: aceest-fitness
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30080
